--- a/index.html
+++ b/index.html
@@ -21,22 +21,23 @@
              <fieldset class="btn"><input value=""><button>Copy Text</button></fieldset>
              <fieldset class="btn"><input value=""><button>Copy Text</button></fieldset>
          </div>
+         <a class="text_URL" href="https://hhiep00.github.io/gift/gift.html" target="_blank"><img class="icon" src="./image/shortcut.png">Lưu gift</a>
          <!-- <a class="text_URL" href="./src/ProxyScreenshotBypass_0106.dylib" target="_blank"><img class="icon" src="./image/downloads.png">Download ProxyScreenshotBypass_0106</a> -->
          <!-- <a class="text_URL" href="./src/1-AppsManager_1.8.4_Crack.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Apps Manager</a> -->
          <!-- <a class="text_URL" href="./src/2-Filza_NoUrlScheme_4.0Crack@巨魔商店.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Filza</a> -->
          <!-- <a class="text_URL" href="./src/data-full.zip" target="_blank"><img class="icon" src="./image/downloads.png">Download Data Settings</a> -->
          <!-- <a class="text_URL" href="./backup.html" target="_blank"><img class="icon" src="./image/Bookmarklet.png">Tạo Bookmarklet</a> -->
-         <a class="text_URL" href="https://havoc.app/package/trollfools/" target="_blank"><img class="icon" src="./image/trollfood.webp">Download TrollFools New</a>
+         <!-- <a class="text_URL" href="https://havoc.app/package/trollfools/" target="_blank"><img class="icon" src="./image/trollfood.webp">Download TrollFools New</a>
          <a class="text_URL" href="https://ios.cfw.guide/installing-trollstore-trollrestore/" target="_blank"><img class="icon" src="./image/TrollStore.jpg">Add TrollStore For PC-Mac</a>
          <a class="text_URL" href="https://ios.cfw.guide/installing-trollstore-trollhelperota/" target="_blank"><img class="icon" src="./image/TrollStore.jpg">TrollHelperOTA</a>
          <a class="text_URL" href="https://tigisoftware.com/repo/" target="_blank"><img class="icon" src="https://getsileo.app/img/icon.png">Add Tigisoftware Sileo</a>
-         <a class="text_URL" href="https://www.icloud.com/shortcuts/17b0a2589825439aa71e7bf1d4fd7d43" target="_blank"><img class="icon" src="./image/shortcut.png">Add Shortcut Tiktok 60p</a>
-         <a class="text_URL" href="https://www.icloud.com/shortcuts/41005f1838684245b4d256da082532a9" target="_blank"><img class="icon" src="./image/shortcut.png">Add Shortcut Tiktok 30p</a>
+         <a class="text_URL" href="https://www.icloud.com/shortcuts/17b0a2589825439aa71e7bf1d4fd7d43" target="_blank"><img class="icon" src="./image/shortcut.png">Add Shortcut Tiktok 60p</a> -->
+         <!-- <a class="text_URL" href="https://www.icloud.com/shortcuts/41005f1838684245b4d256da082532a9" target="_blank"><img class="icon" src="./image/shortcut.png">Add Shortcut Tiktok 30p</a> -->
          <fieldset class="btn"><input value="/private/var/mobile/Library/Preferences/iFakePro/main"><button>Copy Text</button></fieldset>
          <fieldset class="btn"><input value="/private/var/mobile/Library/ADManager"><button>Copy Text</button></fieldset>
      </main>
      <script>
-         var qrText = "https://xniccyx.github.io/ios";
+         var qrText = "https://hhiep00.github.io/ios";
          new QRCode(document.getElementById("qrcode"), qrText);
          //Copy Text
          document.addEventListener('click', e => {if (e.target.tagName === 'BUTTON') {const input = e.target.previousElementSibling;if (input?.tagName === 'INPUT') {navigator.clipboard.writeText(input.value).catch(console.error);}}});
@@ -49,6 +50,6 @@
          toggleBtn.textContent = isVisible ? 'Hiện Copy Text' : 'Ẩn';
          });
        </script>
-     <footer style="text-align: center;">&copy; 2025 - ThangLD - All Rights Reserved.</footer>
+     <footer style="text-align: center;">&copy; 2025 - HiepDH - All Rights Reserved.</footer>
  </body>
  </html>
