--- a/gift.html
+++ b/gift.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="vi">
 
 <head>
@@ -9,85 +8,83 @@
     <link rel="icon" type="image/png" href="./image/appstore.png">
     <link rel="stylesheet" href="./main.css">
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
+    <style>
+        #showBtn {
+            display: none;
+            margin: 10px;
+        }
+
+        body {
+            font-weight: bold;
+        }
+
+        input {
+            width: calc(100% - 10px);
+            min-height: 50px;
+            display: flex;
+            border: 1px solid #ccc;
+            margin: 5px;
+        }
+
+        button {
+            background-color: #9bffff;
+            width: calc(100% - 10px);
+            min-height: 50px;
+            display: flex;
+            align-items: center;
+            border: 1px solid #ccc;
+            margin: 5px;
+            font-weight: bold;
+        }
+
+        .columns label {
+            max-height: 50px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            border: 1px solid #ccc;
+            margin: 5px;
+            padding: 5px 10px;
+        }
+
+        .columns input[type="radio"] {
+            width: 15px;
+            height: 15px;
+            accent-color: #007bff;
+        }
+
+        .columns label.active {
+            background-color: #a5ffad;
+            border-color: #00ff15;
+        }
+
+        fieldset {
+            width: calc(100% - 20px);
+            border: 1px dashed #ccc;
+            display: flex;
+            justify-content: center;
+            margin: 15px auto 15px;
+        }
+    </style>
 </head>
 
 <body>
     <h1 class="rainbow-animated">Lưu Gift</h1>
     <input type="text" id="inputData" placeholder="Nhập link Gift muốn lưu">
     <button onclick="sendGiftToSheet('Sheet1')">Lưu Gift - Tổng</button>
-    <!-- <button onclick="sendGiftToSheet('Dàn A')">Lưu Gift - Dàn A</button>
-  <button onclick="sendGiftToSheet('Dàn B')">Lưu Gift - Dàn B</button>
-  <button onclick="sendGiftToSheet('Dàn C')">Lưu Gift - Dàn C</button> -->
     <div class="columns">
-        <label><input type="radio" name="giftType" value="gift100" checked>Gift 100</label>
+        <label><input type="radio" name="giftType" value="gift100" checked="">Gift 100</label>
         <label><input type="radio" name="giftType" value="gift500">Gift 500</label>
         <label><input type="radio" name="giftType" value="gift1000">Gift 1000</label>
         <label><input type="radio" name="giftType" value="gift1000">Gift 3000</label>
-        <label><input type="radio" name="giftType" value="Check URL">Check URL</label>
-        <label><input type="radio" name="giftType" value="Check User">Check User</label>
     </div>
 
-    <!-- <div class="title" style="background-color: #9bffff;padding: 10px;" id="randomDNS">IP sẽ hiển thị ở đây</div> -->
-    <!-- <button class="btn" onclick="copyToClipboard()">Copy Random DNS</button> -->
+    <div style="margin: 10px;" id="qrcode" title="https://hhiep00.github.io/gift"><canvas width="256" height="256"
+            style="display: none;"></canvas>
+        </div>
+    <footer>© 2025 - HiepDH - All Rights Reserved.</footer>
 
-    <div style="margin: 10px;" id="qrcode"></div>
-    <footer>&copy; 2025 - HiepDH - All Rights Reserved.</footer>
-
-    <script src="script.js">
-        // let ipList = [];
-
-        // async function fetchDNSList() {
-        //     const proxyUrl = "https://api.allorigins.win/get?url=" + encodeURIComponent("https://public-dns.info/nameserver/jp.html");
-        //     const displayElement = document.getElementById("randomDNS");
-
-        //     try {
-        //         const response = await fetch(proxyUrl);
-        //         const data = await response.json();
-        //         const parser = new DOMParser();
-        //         const doc = parser.parseFromString(data.contents, "text/html");
-        //         const rows = doc.querySelectorAll("table tbody tr");
-        //         const ipRegex = /^(?:\d{1,3}\.){3}\d{1,3}$/; // Regex for valid IPv4 addresses
-        //         ipList = Array.from(rows)
-        //             .map(row => row.querySelector("td").textContent.trim())
-        //             .filter(ip => ipRegex.test(ip)); // Filter only valid IPs
-
-        //         if (ipList.length > 0) {
-        //             setRandomIP();
-        //         } else {
-        //             displayElement.textContent = "No valid IP addresses found.";
-        //         }
-        //     } catch (error) {
-        //         console.error("Error fetching DNS list:", error);
-        //         displayElement.textContent = "Error loading DNS data.";
-        //     }
-        // }
-
-        // function setRandomIP() {
-        //     if (ipList.length > 0) {
-        //         const randomIP = ipList[Math.floor(Math.random() * ipList.length)];
-        //         document.getElementById("randomDNS").textContent = randomIP;
-        //         return randomIP;
-        //     }
-        //     return null;
-        // }
-
-        // function copyToClipboard() {
-        //     const ip = document.getElementById("randomDNS").textContent;
-        //     if (ip && ip !== "Error loading DNS data." && ip !== "No valid IP addresses found.") {
-        //         navigator.clipboard.writeText(ip).then(() => {
-        //             alert("Copied to clipboard: " + ip);
-        //             setRandomIP(); // Change to a new random IP after copying
-        //         }).catch((error) => {
-        //             alert("Failed to copy: " + error);
-        //         });
-        //     } else {
-        //         alert("No valid IP address to copy.");
-        //     }
-        // }
-
-        // Load the DNS list on page load
-        // window.onload = fetchDNSList;
-    </script>
+    <script src="script.js"></script>
 
 </body>
 
