--- a/gift.html
+++ b/gift.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#06c1db">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>iOS Support - Đoàn</title>
+    <title>iOS Support - Thắng</title>
     <link rel="icon" type="image/png" href="./image/appstore.png">
     <link rel="stylesheet" href="./main.css">
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
@@ -82,7 +82,7 @@
     <div style="margin: 10px;" id="qrcode" title="https://hhiep00.github.io/gift"><canvas width="256" height="256"
             style="display: none;"></canvas>
         </div>
-    <footer>© 2025 - HiepDH - All Rights Reserved.</footer>
+    <footer>© 2025 - ThangLD - All Rights Reserved.</footer>
 
     <script src="script.js"></script>
 
