--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
          <a class="text_URL" href="https://tigisoftware.com/repo/" target="_blank"><img class="icon" src="https://getsileo.app/img/icon.png">Add Tigisoftware Sileo</a>
          <a class="text_URL" href="https://www.icloud.com/shortcuts/17b0a2589825439aa71e7bf1d4fd7d43" target="_blank"><img class="icon" src="./image/shortcut.png">Add Shortcut Tiktok 60p</a> -->
         <!-- <a class="text_URL" href="https://www.icloud.com/shortcuts/41005f1838684245b4d256da082532a9" target="_blank"><img class="icon" src="./image/shortcut.png">Add Shortcut Tiktok 30p</a> -->
-        <fieldset class="btn"><input value="/private/var/mobile/Library/Preferences/iFakePro/main"><button>Copy
+        <!-- <fieldset class="btn"><input value="/private/var/mobile/Library/Preferences/iFakePro/main"><button>Copy
                 Text</button></fieldset>
-        <fieldset class="btn"><input value="/private/var/mobile/Library/ADManager"><button>Copy Text</button></fieldset>
+        <fieldset class="btn"><input value="/private/var/mobile/Library/ADManager"><button>Copy Text</button></fieldset> -->
         <div id="fieldsetsContainer"></div>
     </main>
     <script>
