--- a/gift.html
+++ b/gift.html
@@ -81,9 +81,9 @@
 
     <div style="margin: 10px;" id="qrcode" title="https://hhiep00.github.io/gift"><canvas width="256" height="256"
             style="display: none;"></canvas>
-        </div>
+    </div>
     <footer>© 2025 - ThangLD - All Rights Reserved.</footer>
-
+    <script src="config.js"></script>
     <script src="script.js"></script>
 
 </body>
