--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <a class="text_URL" href="https://hhiep00.github.io/gift/gift.html" target="_blank"><img class="icon"
                 src="./img/diskette.png" width="24" height="24">Lưu gift</a>
-        <a class="text_URL" href="https://hhiep00.github.io/gift/list-account.html" target="_blank"><img class="icon"
+        <a class="text_URL" href="https://hhiep00.github.io/gift/list-accounts.html" target="_blank"><img class="icon"
                 src="./img/customer.png" width="24" height="24">Danh sách account</a>
         <!-- <a class="text_URL" href="./src/ProxyScreenshotBypass_0106.dylib" target="_blank"><img class="icon" src="./image/downloads.png">Download ProxyScreenshotBypass_0106</a> -->
         <!-- <a class="text_URL" href="./src/1-AppsManager_1.8.4_Crack.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Apps Manager</a> -->
