--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
         <div style="margin: 10px;" id="qrcode"></div>
         <button class="text_URL" id="toggleBtn">Hiện Copy Text</button>
         <div id="showBtn">
-            <fieldset class="btn"><input value=""><button>Copy Text</button></fieldset>
-            <fieldset class="btn"><input value=""><button>Copy Text</button></fieldset>
+            <fieldset class="btn"><input value="ieYaakov1144@icloud.com Mnbv321321"><button>Copy Text</button>
+            </fieldset>
+            <fieldset class="btn"><input value="enFearey2206@icloud.com Mnbv321321"><button>Copy Text</button>
+            </fieldset>
         </div>
         <a class="text_URL" href="https://hhiep00.github.io/gift/gift.html" target="_blank"><img class="icon"
                 src="./img/diskette.png" width="24" height="24">Lưu gift</a>
         <a class="text_URL" href="https://hhiep00.github.io/gift/list-accounts.html" target="_blank"><img class="icon"
                 src="./img/customer.png" width="24" height="24">Danh sách account</a>
+        <a class="text_URL" href="https://hhiep00.github.io/gift/list-proxy.html" target="_blank"><img class="icon"
+                src="./img/proxy.png" width="24" height="24">Danh sách proxy</a>
         <!-- <a class="text_URL" href="./src/ProxyScreenshotBypass_0106.dylib" target="_blank"><img class="icon" src="./image/downloads.png">Download ProxyScreenshotBypass_0106</a> -->
         <!-- <a class="text_URL" href="./src/1-AppsManager_1.8.4_Crack.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Apps Manager</a> -->
         <!-- <a class="text_URL" href="./src/2-Filza_NoUrlScheme_4.0Crack@巨魔商店.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Filza</a> -->
