--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 src="./img/customer.png" width="24" height="24">Danh sách account</a>
         <a class="text_URL" href="https://hhiep00.github.io/gift/list-proxy.html" target="_blank"><img class="icon"
                 src="./img/proxy.png" width="24" height="24">Danh sách proxy</a>
+        <a class="text_URL" href="https://hhiep00.github.io/gift/gen-qr.html" target="_blank"><img class="icon"
+                src="./img/qr.png" width="24" height="24">Tạo QR</a>
         <!-- <a class="text_URL" href="./src/ProxyScreenshotBypass_0106.dylib" target="_blank"><img class="icon" src="./image/downloads.png">Download ProxyScreenshotBypass_0106</a> -->
         <!-- <a class="text_URL" href="./src/1-AppsManager_1.8.4_Crack.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Apps Manager</a> -->
         <!-- <a class="text_URL" href="./src/2-Filza_NoUrlScheme_4.0Crack@巨魔商店.tipa" target="_blank"><img class="icon" src="./image/downloads.png">Download Filza</a> -->
